# Houston

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  deploy-compose.yml  docker-compose.yml  pgadmin_defaults.json  rustfmt.toml  sqlx-data.json
.github/: dependabot.yml
.github/workflows/: deploy.yml  docker.yml  quality.yml  rust.yml  security.yml
migrations/: 20221205073744_init.down.sql  20221205073744_init.up.sql  20221210061331_seed-users.down.sql  20221210061331_seed-users.up.sql  20221210063219_auto-increment-cape-id.down.sql  20221210063219_auto-increment-cape-id.up.sql  20221210072138_remove-avatar-url.down.sql  20221210074029_player-capes.down.sql  20221210074029_player-capes.up.sql  20221210142811_add-legacy-cape-names.down.sql  20221210142811_add-legacy-cape-names.up.sql
src/: main.rs
src/database/: mod.rs  pg_db.rs
src/database/models/: cape_model.rs  mod.rs  player_cape_model.rs  user_model.rs
src/health/: status.rs
src/models/: cape.rs  error.rs  mod.rs  user.rs
src/routes/: auth.rs  cape.rs  health.rs  index.rs  mod.rs  not_found.rs  user.rs
src/utils/: auth.rs  env.rs
