[package]
name = "Houston"
version = "0.1.0"
edition = "2021"
authors = [ "JustPyrrha <pyrrha.social@gmail.com>" ]
license = "AGPL-3.0"
build = "build.rs"

[[bin]]
name = "houston"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-rt = "2.7.0"
actix-web = "4.2.1"

dotenvy = "0.15.6"
env_logger = "0.10.0"
log = "0.4.17"
thiserror = "1.0.37"

sqlx = { version = "0.6.2", features = ["runtime-actix-rustls", "postgres", "chrono", "offline", "macros", "migrate", "decimal", "uuid"] }
serde_json = "1.0.89"
serde_with = "2.1.0"
serde = { version = "1.0.149", features = ["derive"] }
chrono = { version = "0.4.23", features = ["serde"] }

sentry = "0.29.1"
sentry-actix = "0.29.1"
reqwest = { version = "0.11.13", features = ["json", "native-tls"] }
bitflags = "1.3.2"
uuid = "1.2.2"
